src/main/resources/deployments/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-docker-compose
  labels:
    name: spring-boot-docker-compose
spec:
  ports:
    - nodePort: 30164 
      port: 8080      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: spring-boot-docker-compose
  type: LoadBalancer       

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: spring-boot-docker-compose
spec:                
  selector:         
    matchLabels:
      app: spring-boot-docker-compose
  replicas: 1      
  template:
    metadata:
      labels:        
        app: spring-boot-docker-compose
    spec:
      containers:
        - name: spring-boot-docker-compose
          image: {hub-username}/spring-boot-docker-compose:1.0
          ports:
            - containerPort: 8080                
          env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: mysql-configuration  # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: mysql-configuration 
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: mysql-user-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: mysql-user-credentials
                key: password
