src/main/resources/deployments/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-docker-compose
spec:
  rules:
  - host: spring-boot-docker-compose.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-docker-compose
            port:
              number: 8080
